# Sharpe_Optimization

./: .gitignore  CHANGELOG.md  Makefile  README.md  requirements.txt  sharpe-optimization.cabal
app/: Main.hs
data/: download.py  download_data.py
src/SharpeOptimization/: DataLoader.hs  Simulate.hs  SimulateParallel.hs  SimulateSequential.hs  Statistics.hs  Types.hs  Weights.hs
