cabal-version:      3.0
name:               sharpe-optimization
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             PedroPauloMorenoCamargo
maintainer:         ppmcamargo@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:              warnings
  exposed-modules:     SharpeOptimization.Types
                     , SharpeOptimization.DataLoader
                     , SharpeOptimization.Simulate
                     , SharpeOptimization.Statistics
                     , SharpeOptimization.Weights
  other-modules:       
  hs-source-dirs:      src
  build-depends:       base ^>=4.18.3.0,
                       split,
                       transformers,
                       parallel,
                       random,
                       splitmix,
                       deepseq,
                       MonadRandom,
                       vector,
                       async
  default-language:    Haskell2010

executable sharpe-optimization-exe
  import:              warnings
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       base ^>=4.18.3.0,
                       sharpe-optimization,
                       transformers,
                       deepseq,
                       time,
                       containers,
                       random,
                       vector,
                       MonadRandom
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
